--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Baskervville+SC&display=swap" rel="stylesheet">
+    
 </head>
 <body>
     
@@ -23,7 +24,7 @@
             </h2>
         </div>
         <img class="bottom-cloud" src="./images/cloud.png" alt="cloud">
-        <img src="./images/mountain.png" alt="mountain">
+        <img class="mountain" src="./images/mountain.png" alt="mountain">
     </div>
 
     <div class="middle-container">
